[WIP] First version of StaticCudaLauncher
Putting this up for a first pass review, though I will likely make a bunch of changes before landing to add more features, etc.

This diff implements a first version of a static CUDA kernel launcher in `torch._C`. The goal here is to take a cubin file and some metadata from a CompiledKernel from `triton`, and launch the cubin file directly.

Background doc: https://docs.google.com/document/d/1rjRcHl6MfauHG30nCoQX-9UKvKyIs4WWMy_GsGyqb9g/edit?tab=t.0#heading=h.ut5lf39lzq66

Normally, using triton's CompiledKernel.make_launcher(), we would pay the cost of codegenning C++ and running it at compile time. With this new approach, we can use one statically compiled library to launch the kernel.

The tradeoff here is that this new kernel launcher will not be able to use codegen to deal with different lengths/types of arguments. So we use templating to handle up to 10 arguments for now. We also allocate 8 bytes on the stack per argument no matter the argument type, which can take more memory than codegenning. On the other hand, we improve compile time on cold and warm start by not having to call the C++ compiler at all.

This diff does not add the launcher to torch, but introduces a basic test suite.

A list of TODOs that are not yet complete:
- Handle `nvTmaDesc` and `cuTensorMap`, which triton handles
- Embed the grid logic instead of passing in gridX,Y,Z
- Handle launch_enter and exit hooks? (Not sure if inductor has these)
- Benchmarking to see if there's runtime performance loss
- Probably lots of features of the triton C++ generated code that I haven't handled yet.

Differential Revision: [D69926783](https://our.internmc.facebook.com/intern/diff/D69926783/)

[ghstack-poisoned]

--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -2525,3 +2525,136 @@ class _NodeIter(Iterator):
     def __init__(self, root: FxNode, reversed: _bool) -> None: ...
     def __iter__(self) -> Iterator[FxNode]: ...
     def __next__(self) -> FxNode: ...
+
+
+# Defined in torch/csrc/inductor/static_cuda_launcher.cpp
+class _StaticCudaLauncher:
+    def _launch_cuda_kernel_1(
+        cubin_path: str,
+        kernel_name: str,
+        grid_x: int,
+        grid_y: int,
+        grid_z: int,
+        num_warps: int,
+        sharedMemBytes: int,
+        arg_types: str,
+        args: Tuple[Any]
+        stream: int,
+    ) ->  None: ...
+
+    def _launch_cuda_kernel_2(
+        cubin_path: str,
+        kernel_name: str,
+        grid_x: int,
+        grid_y: int,
+        grid_z: int,
+        num_warps: int,
+        sharedMemBytes: int,
+        arg_types: str,
+        args: Tuple[Any, Any],
+        stream: int,
+    ) ->  None: ...
+
+    def _launch_cuda_kernel_3(
+        cubin_path: str,
+        kernel_name: str,
+        grid_x: int,
+        grid_y: int,
+        grid_z: int,
+        num_warps: int,
+        sharedMemBytes: int,
+        arg_types: str,
+        args: Tuple[Any, Any, Any],
+        stream: int,
+    ) ->  None: ...
+
+    def _launch_cuda_kernel_4(
+            cubin_path: str,
+            kernel_name: str,
+            grid_x: int,
+            grid_y: int,
+            grid_z: int,
+            num_warps: int,
+            sharedMemBytes: int,
+            arg_types: str,
+            args: Tuple[Any, Any, Any],
+            stream: int,
+        ) ->  None: ...
+
+    def _launch_cuda_kernel_5(
+            cubin_path: str,
+            kernel_name: str,
+            grid_x: int,
+            grid_y: int,
+            grid_z: int,
+            num_warps: int,
+            sharedMemBytes: int,
+            arg_types: str,
+            args: Tuple[Any, Any, Any],
+            stream: int,
+        ) ->  None: ...
+
+    def _launch_cuda_kernel_6(
+        cubin_path: str,
+        kernel_name: str,
+        grid_x: int,
+        grid_y: int,
+        grid_z: int,
+        num_warps: int,
+        sharedMemBytes: int,
+        arg_types: str,
+        args: Tuple[Any, Any, Any],
+        stream: int,
+    ) ->  None: ...
+
+    def _launch_cuda_kernel_7(
+            cubin_path: str,
+            kernel_name: str,
+            grid_x: int,
+            grid_y: int,
+            grid_z: int,
+            num_warps: int,
+            sharedMemBytes: int,
+            arg_types: str,
+            args: Tuple[Any, Any, Any],
+            stream: int,
+        ) ->  None: ...
+
+    def _launch_cuda_kernel_8(
+            cubin_path: str,
+            kernel_name: str,
+            grid_x: int,
+            grid_y: int,
+            grid_z: int,
+            num_warps: int,
+            sharedMemBytes: int,
+            arg_types: str,
+            args: Tuple[Any, Any, Any],
+            stream: int,
+        ) ->  None: ...
+
+    def _launch_cuda_kernel_9(
+            cubin_path: str,
+            kernel_name: str,
+            grid_x: int,
+            grid_y: int,
+            grid_z: int,
+            num_warps: int,
+            sharedMemBytes: int,
+            arg_types: str,
+            args: Tuple[Any, Any, Any],
+            stream: int,
+        ) ->  None: ...
+
+    def _launch_cuda_kernel_10(
+            cubin_path: str,
+            kernel_name: str,
+            grid_x: int,
+            grid_y: int,
+            grid_z: int,
+            num_warps: int,
+            sharedMemBytes: int,
+            arg_types: str,
+            args: Tuple[Any, Any, Any],
+            stream: int,
+        ) ->  None: ...
