--- a/.github/workflows/build-almalinux-images.yml
+++ b/.github/workflows/build-almalinux-images.yml
@@ -2,23 +2,23 @@ name: Build almalinux docker images
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
-      - release/*
-    tags:
-      # NOTE: Binary build pipelines should only get triggered on release candidate or nightly builds
-      # Release candidate tags look like: v1.11.0-rc1
-      - v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+
-    paths:
-      - '.ci/docker/almalinux/*'
-      - '.ci/docker/common/*'
-      - .github/workflows/build-almalinux-images.yml
-  pull_request:
-    paths:
-      - '.ci/docker/almalinux/*'
-      - '.ci/docker/common/*'
-      - .github/workflows/build-almalinux-images.yml
+  # push:
+  #   branches:
+  #     - main
+  #     - release/*
+  #   tags:
+  #     # NOTE: Binary build pipelines should only get triggered on release candidate or nightly builds
+  #     # Release candidate tags look like: v1.11.0-rc1
+  #     - v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+
+  #   paths:
+  #     - '.ci/docker/almalinux/*'
+  #     - '.ci/docker/common/*'
+  #     - .github/workflows/build-almalinux-images.yml
+  # pull_request:
+  #   paths:
+  #     - '.ci/docker/almalinux/*'
+  #     - '.ci/docker/common/*'
+  #     - .github/workflows/build-almalinux-images.yml
 
 env:
   DOCKER_REGISTRY: "docker.io"
