--- a/.github/pytorch-probot.yml
+++ b/.github/pytorch-probot.yml
@@ -23,6 +23,7 @@ ciflow_push_tags:
 - ciflow/xpu
 - ciflow/torchbench
 - ciflow/autoformat
+- ciflow/win-arm64
 retryable_workflows:
 - pull
 - trunk
