--- a/.gitmodules
+++ b/.gitmodules
@@ -91,8 +91,7 @@
 	url = https://github.com/NVIDIA/cudnn-frontend.git
 [submodule "third_party/kineto"]
     path = third_party/kineto
-    url = https://github.com/ROCm/kineto.git
-    branch = rocprof_sdk
+    url = https://github.com/pytorch/kineto
 [submodule "third_party/pocketfft"]
 	path = third_party/pocketfft
 	url = https://github.com/mreineck/pocketfft
