Tell dmypy to ignore bad package
[ghstack-poisoned]

--- a/mypy.ini
+++ b/mypy.ini
@@ -46,7 +46,8 @@ files =
 #
 # `exclude` is a regex, not a list of paths like `files` (sigh)
 #
-exclude = torch/include/|torch/csrc/|torch/distributed/elastic/agent/server/api.py|torch/testing/_internal|torch/distributed/fsdp/fully_sharded_data_parallel.py
+# third_party/NNPACK/src/x86_64-fma - dmypy doesn't like this package name so we need to exclude it.
+exclude = torch/include/|torch/csrc/|torch/distributed/elastic/agent/server/api.py|torch/testing/_internal|torch/distributed/fsdp/fully_sharded_data_parallel.py|third_party/NNPACK/src/x86_64-fma
 
 python_version = 3.11
 
