--- a/.github/workflows/build-triton-wheel.yml
+++ b/.github/workflows/build-triton-wheel.yml
@@ -54,6 +54,9 @@ jobs:
           - device: "cuda"
             rocm_version: ""
             runs_on: "${{ needs.get-label-type.outputs.label-type }}linux.4xlarge"
+          - device: "xpu"
+            rocm_version: ""
+            runs_on: "${{ needs.get-label-type.outputs.label-type }}linux.4xlarge"
           - device: "aarch64"
             rocm_version: ""
             runs_on: "${{ needs.get-label-type.outputs.label-type }}linux.arm64.2xlarge"
