--- a/.github/workflows/build-triton-wheel.yml
+++ b/.github/workflows/build-triton-wheel.yml
@@ -141,7 +141,6 @@ jobs:
           docker exec -t "${container_name}" yum install -y zlib-devel zip
           docker exec -t "${container_name}" "${PYTHON_EXECUTABLE}"  -m pip install -U setuptools==67.4.0 pybind11==2.13.1 auditwheel
           if [[ "${{ matrix.device }}" == "aarch64" ]]; then
-            export PATH=${PYTHON_PATH}:${PATH}
             docker exec -t "${container_name}" "${PYTHON_EXECUTABLE}" -m pip install ninja
           fi
           if [[ ("${{ matrix.device }}" == "cuda" || "${{ matrix.device }}" == "rocm") ]]; then
@@ -154,6 +153,7 @@ jobs:
             docker exec -t "${container_name}" bash -c "dnf install -y gcc-toolset-13-gcc-c++"
             docker exec -t "${container_name}" bash -c "source /opt/rh/gcc-toolset-13/enable && ${PYTHON_EXECUTABLE} /pytorch/.github/scripts/build_triton_wheel.py --device=$BUILD_DEVICE $RELEASE"
           else
+            docker exec -t "${container_name}" bash -c export PATH=${PYTHON_PATH}:${PATH}
             docker exec -t "${container_name}" bash -c "${PYTHON_EXECUTABLE} /pytorch/.github/scripts/build_triton_wheel.py --device=$BUILD_DEVICE $RELEASE $WITH_CLANG_LDD"
           fi
 
