--- a/.github/workflows/build-triton-wheel.yml
+++ b/.github/workflows/build-triton-wheel.yml
@@ -62,7 +62,7 @@ jobs:
             runs_on: "${{ needs.get-label-type.outputs.label-type }}linux.arm64.2xlarge"
     timeout-minutes: 40
     env:
-      DOCKER_IMAGE: ${{ matrix.device == 'rocm' && format('pytorch/manylinux2_28-builder:rocm{0}', matrix.rocm_version) || matrix.device == 'aarch64' && 'pytorch/manylinux2_28_aarch64-builder:cpu-aarch64' || matrix.docker-image }}
+      DOCKER_IMAGE: ${{ matrix.device == 'rocm' && format('pytorch/manylinux2_28-builder:rocm{0}', matrix.rocm_version) || matrix.device == 'aarch64' && '308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/manylinuxaarch64-builder-cpu-aarch64:e33ce6a365df5d94fadb737074927ab6415ef457' || matrix.docker-image }}
       PY_VERS: ${{ matrix.py_vers }}
       BUILD_DEVICE: ${{ matrix.device }}
       PLATFORM: 'manylinux_2_28_x86_64'
@@ -104,27 +104,21 @@ jobs:
           case $PY_VERS in
           3.9)
             PYTHON_EXECUTABLE=/opt/python/cp39-cp39/bin/python
-            PYTHON_PATH=/opt/python/cp39-cp39/bin
             ;;
           3.10)
             PYTHON_EXECUTABLE=/opt/python/cp310-cp310/bin/python
-            PYTHON_PATH=/opt/python/cp310-cp310/bin
             ;;
           3.11)
             PYTHON_EXECUTABLE=/opt/python/cp311-cp311/bin/python
-            PYTHON_PATH=/opt/python/cp311-cp311/bin
             ;;
           3.12)
             PYTHON_EXECUTABLE=/opt/python/cp312-cp312/bin/python
-            PYTHON_PATH=/opt/python/cp312-cp312/bin
             ;;
           3.13)
             PYTHON_EXECUTABLE=/opt/python/cp313-cp313/bin/python
-            PYTHON_PATH=/opt/python/cp313-cp313/bin
             ;;
           3.13t)
             PYTHON_EXECUTABLE=/opt/python/cp313-cp313t/bin/python
-            PYTHON_PATH=/opt/python/cp313t-cp313t/bin
             ;;
           *)
             echo "Unsupported python version ${PY_VERS}"
@@ -140,10 +134,7 @@ jobs:
 
           docker exec -t "${container_name}" yum install -y zlib-devel zip
           docker exec -t "${container_name}" "${PYTHON_EXECUTABLE}"  -m pip install -U setuptools==67.4.0 pybind11==2.13.1 auditwheel
-          if [[ "${{ matrix.device }}" == "aarch64" ]]; then
-            docker exec -t "${container_name}" "${PYTHON_EXECUTABLE}" -m pip install ninja
-          fi
-          if [[ ("${{ matrix.device }}" == "cuda" || "${{ matrix.device }}" == "rocm" || "${{ matrix.device }}" == "aarch64" ) ]]; then
+          if [[ ("${{ matrix.device }}" == "cuda" || "${{ matrix.device }}" == "rocm" || "${{ matrix.device }}" == "aaech64" ) ]]; then
             # With this install, it gets clang 16.0.6.
             docker exec -t "${container_name}" dnf install clang lld -y
             WITH_CLANG_LDD="--with-clang-ldd"
@@ -153,7 +144,7 @@ jobs:
             docker exec -t "${container_name}" bash -c "dnf install -y gcc-toolset-13-gcc-c++"
             docker exec -t "${container_name}" bash -c "source /opt/rh/gcc-toolset-13/enable && ${PYTHON_EXECUTABLE} /pytorch/.github/scripts/build_triton_wheel.py --device=$BUILD_DEVICE $RELEASE"
           else
-            docker exec -t "${container_name}" bash -c "PATH=${PYTHON_PATH}:${PATH} ${PYTHON_EXECUTABLE} /pytorch/.github/scripts/build_triton_wheel.py --device=$BUILD_DEVICE $RELEASE $WITH_CLANG_LDD"
+            docker exec -t "${container_name}" bash -c "${PYTHON_EXECUTABLE} /pytorch/.github/scripts/build_triton_wheel.py --device=$BUILD_DEVICE $RELEASE $WITH_CLANG_LDD"
           fi
 
           if [[ ("${{ matrix.device }}" == "cuda" || "${{ matrix.device }}" == "xpu") ]]; then
