--- a/.github/workflows/_win-arm64-build.yml
+++ b/.github/workflows/_win-arm64-build.yml
@@ -78,6 +78,8 @@ jobs:
     if: github.repository_owner == 'pytorch'
     runs-on: ${{ inputs.runner }}
     timeout-minutes: 240
+    outputs:
+      test-matrix: ${{ steps.filter.outputs.test-matrix }}
     defaults:
       run:
         shell: bash
@@ -106,6 +108,16 @@ jobs:
         with:
           path: pytorch
           submodules: recursive
+      - name: Parse ref
+        id: parse-ref
+        shell: bash
+        run: python3 .github/scripts/parse_ref.py
+      - name: Get workflow job id
+        id: get-job-id
+        uses: ./.github/actions/get-workflow-job-id
+        if: always()
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Bootstrap Python
         shell: cmd
         run: |
@@ -158,3 +170,16 @@ jobs:
         run: |
           cd pytorch
           .ci/pytorch/win-arm64-build.sh
+      - name: Upload artifacts to s3
+        if: steps.build.outcome != 'skipped'
+        uses: seemethere/upload-artifact-s3@v5
+        with:
+          retention-days: 14
+          if-no-files-found: error
+          name: ${{ inputs.build-environment }}
+          path: C:\${{ github.run_id }}\build-results
+      - name: Upload sccache stats
+        if: steps.build.outcome != 'skipped'
+        uses: ./.github/actions/upload-sccache-stats
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
