--- a/.github/workflows/_win-arm64-build.yml
+++ b/.github/workflows/_win-arm64-build.yml
@@ -51,11 +51,14 @@ on:
         default: windows-11-arm64
         description: |
           Label of the runner this job should run on.
-
+  
     outputs:
       test-matrix:
         value: ${{ jobs.build.outputs.test-matrix }}
         description: An optional JSON description of what test configs to run later on.
+  push:
+    tags:
+      - ciflow/win-arm64/*      
 
 env:
   GIT_DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
