--- a/.github/workflows/_win-arm64-build.yml
+++ b/.github/workflows/_win-arm64-build.yml
@@ -58,7 +58,8 @@ on:
         description: An optional JSON description of what test configs to run later on.
   push:
     tags:
-      - ciflow/win-arm64/*      
+      - ciflow/win-arm64/*
+          
 
 env:
   GIT_DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
@@ -79,7 +80,7 @@ jobs:
   build:
     # Don't run on forked repos.
     if: github.repository_owner == 'pytorch'
-    runs-on: ${{ inputs.runner }}
+    runs-on: "windows-11-arm64"
     timeout-minutes: 240
     outputs:
       test-matrix: ${{ steps.filter.outputs.test-matrix }}
