Use NODE_NAME env var when available

--- a/.github/actions/setup-rocm/action.yml
+++ b/.github/actions/setup-rocm/action.yml
@@ -9,7 +9,7 @@ runs:
       if: always()
       shell: bash
       run: |
-        hostname
+        echo "Hostname: ${NODE_NAME:-$(hostname)}"
     - name: Stop all running docker containers
       if: always()
       shell: bash
