--- a/.github/workflows/inductor-perf-test-nightly-x86.yml
+++ b/.github/workflows/inductor-perf-test-nightly-x86.yml
@@ -74,18 +74,18 @@ jobs:
       docker-image-name: ci-image:pytorch-linux-jammy-py3.9-gcc11-inductor-benchmarks
       test-matrix: |
         { include: [
-          { config: "inductor_huggingface_perf_cpu_x86", shard: 1, num_shards: 3, runner: "ubuntu-latest" },
-          { config: "inductor_huggingface_perf_cpu_x86", shard: 2, num_shards: 3, runner: "ubuntu-latest" },
-          { config: "inductor_huggingface_perf_cpu_x86", shard: 3, num_shards: 3, runner: "ubuntu-latest" },
-          { config: "inductor_timm_perf_cpu_x86", shard: 1, num_shards: 5, runner: "ubuntu-latest" },
-          { config: "inductor_timm_perf_cpu_x86", shard: 2, num_shards: 5, runner: "ubuntu-latest" },
-          { config: "inductor_timm_perf_cpu_x86", shard: 3, num_shards: 5, runner: "ubuntu-latest" },
-          { config: "inductor_timm_perf_cpu_x86", shard: 4, num_shards: 5, runner: "ubuntu-latest" },
-          { config: "inductor_timm_perf_cpu_x86", shard: 5, num_shards: 5, runner: "ubuntu-latest" },
-          { config: "inductor_torchbench_perf_cpu_x86", shard: 1, num_shards: 4, runner: "ubuntu-latest" },
-          { config: "inductor_torchbench_perf_cpu_x86", shard: 2, num_shards: 4, runner: "ubuntu-latest" },
-          { config: "inductor_torchbench_perf_cpu_x86", shard: 3, num_shards: 4, runner: "ubuntu-latest" },
-          { config: "inductor_torchbench_perf_cpu_x86", shard: 4, num_shards: 4, runner: "ubuntu-latest" },
+          { config: "inductor_huggingface_perf_cpu_x86", shard: 1, num_shards: 3, runner: "linux.24xl.spr-metal" },
+          { config: "inductor_huggingface_perf_cpu_x86", shard: 2, num_shards: 3, runner: "linux.24xl.spr-metal" },
+          { config: "inductor_huggingface_perf_cpu_x86", shard: 3, num_shards: 3, runner: "linux.24xl.spr-metal" },
+          { config: "inductor_timm_perf_cpu_x86", shard: 1, num_shards: 5, runner: "linux.24xl.spr-metal" },
+          { config: "inductor_timm_perf_cpu_x86", shard: 2, num_shards: 5, runner: "linux.24xl.spr-metal" },
+          { config: "inductor_timm_perf_cpu_x86", shard: 3, num_shards: 5, runner: "linux.24xl.spr-metal" },
+          { config: "inductor_timm_perf_cpu_x86", shard: 4, num_shards: 5, runner: "linux.24xl.spr-metal" },
+          { config: "inductor_timm_perf_cpu_x86", shard: 5, num_shards: 5, runner: "linux.24xl.spr-metal" },
+          { config: "inductor_torchbench_perf_cpu_x86", shard: 1, num_shards: 4, runner: "linux.24xl.spr-metal" },
+          { config: "inductor_torchbench_perf_cpu_x86", shard: 2, num_shards: 4, runner: "linux.24xl.spr-metal" },
+          { config: "inductor_torchbench_perf_cpu_x86", shard: 3, num_shards: 4, runner: "linux.24xl.spr-metal" },
+          { config: "inductor_torchbench_perf_cpu_x86", shard: 4, num_shards: 4, runner: "linux.24xl.spr-metal" },
         ]}
       selected-test-configs: ${{ inputs.benchmark_configs }}
     secrets: inherit
@@ -100,18 +100,18 @@ jobs:
       docker-image-name: ci-image:pytorch-linux-jammy-py3.9-gcc11-inductor-benchmarks
       test-matrix: |
         { include: [
-          { config: "inductor_huggingface_perf_cpu_x86", shard: 1, num_shards: 3, runner: "ubuntu-latest" },
-          { config: "inductor_huggingface_perf_cpu_x86", shard: 2, num_shards: 3, runner: "ubuntu-latest" },
-          { config: "inductor_huggingface_perf_cpu_x86", shard: 3, num_shards: 3, runner: "ubuntu-latest" },
-          { config: "inductor_timm_perf_cpu_x86", shard: 1, num_shards: 5, runner: "ubuntu-latest" },
-          { config: "inductor_timm_perf_cpu_x86", shard: 2, num_shards: 5, runner: "ubuntu-latest" },
-          { config: "inductor_timm_perf_cpu_x86", shard: 3, num_shards: 5, runner: "ubuntu-latest" },
-          { config: "inductor_timm_perf_cpu_x86", shard: 4, num_shards: 5, runner: "ubuntu-latest" },
-          { config: "inductor_timm_perf_cpu_x86", shard: 5, num_shards: 5, runner: "ubuntu-latest" },
-          { config: "inductor_torchbench_perf_cpu_x86", shard: 1, num_shards: 4, runner: "ubuntu-latest" },
-          { config: "inductor_torchbench_perf_cpu_x86", shard: 2, num_shards: 4, runner: "ubuntu-latest" },
-          { config: "inductor_torchbench_perf_cpu_x86", shard: 3, num_shards: 4, runner: "ubuntu-latest" },
-          { config: "inductor_torchbench_perf_cpu_x86", shard: 4, num_shards: 4, runner: "ubuntu-latest" },
+          { config: "inductor_huggingface_perf_cpu_x86", shard: 1, num_shards: 3, runner: "linux.24xlarge.amd" },
+          { config: "inductor_huggingface_perf_cpu_x86", shard: 2, num_shards: 3, runner: "linux.24xlarge.amd" },
+          { config: "inductor_huggingface_perf_cpu_x86", shard: 3, num_shards: 3, runner: "linux.24xlarge.amd" },
+          { config: "inductor_timm_perf_cpu_x86", shard: 1, num_shards: 5, runner: "linux.24xlarge.amd" },
+          { config: "inductor_timm_perf_cpu_x86", shard: 2, num_shards: 5, runner: "linux.24xlarge.amd" },
+          { config: "inductor_timm_perf_cpu_x86", shard: 3, num_shards: 5, runner: "linux.24xlarge.amd" },
+          { config: "inductor_timm_perf_cpu_x86", shard: 4, num_shards: 5, runner: "linux.24xlarge.amd" },
+          { config: "inductor_timm_perf_cpu_x86", shard: 5, num_shards: 5, runner: "linux.24xlarge.amd" },
+          { config: "inductor_torchbench_perf_cpu_x86", shard: 1, num_shards: 4, runner: "linux.24xlarge.amd" },
+          { config: "inductor_torchbench_perf_cpu_x86", shard: 2, num_shards: 4, runner: "linux.24xlarge.amd" },
+          { config: "inductor_torchbench_perf_cpu_x86", shard: 3, num_shards: 4, runner: "linux.24xlarge.amd" },
+          { config: "inductor_torchbench_perf_cpu_x86", shard: 4, num_shards: 4, runner: "linux.24xlarge.amd" },
         ]}
       selected-test-configs: ${{ inputs.benchmark_configs }}
     secrets: inherit
