Build FBGEMM GenAI as part of PyTorch
Summary:

Test Plan:

Reviewers:

Subscribers:

Tasks:

Tags:

--- a/.gitignore
+++ b/.gitignore
@@ -122,6 +122,7 @@ torch/lib64
 torch/include/
 torch/share/
 torch/test/
+torch/fbgemm_gpu/
 torch/utils/benchmark/utils/valgrind_wrapper/callgrind.h
 torch/utils/benchmark/utils/valgrind_wrapper/valgrind.h
 torch/version.py
