--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ requires = [
     "numpy",
     "ninja",
     "pyyaml",
-    "cmake",
+    "cmake>=3.27",
     "typing-extensions>=4.10.0",
     "requests",
 ]
