--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -2305,6 +2305,8 @@ class _MemPool:
     @property
     def id(self) -> tuple[_int, _int]: ...
     @property
+    def is_symmetric(self) -> _bool: ...
+    @property
     def allocator(self) -> _cuda_CUDAAllocator | None: ...
     def use_count(self) -> _int: ...
 
