--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,6 +9,7 @@ include WORKSPACE
 include BUCK.*
 include requirements.txt
 include version.txt
+include .gitignore
 include .gitmodules
 graft android
 graft aten
